add: documentacion tarea
